[project]
name = "mqtt-topping"
version = "0.1.0"
description = "TD Component to use the Python library mqtt-topping"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    {name = "Julian Krumow", email = "julian.krumow@artcom.de"},
]

dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["mqtt-topping-td"]

[tool.setuptools.package-data]
"*" = ["*.tox"]
